--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <tr>
       <td>ChatGPT Script - FashionShow</td>
       <td>Imagery of high fashion models</td>
-      <td><a href="tango-one-gpt/ChatGPT-Scripts/ChatGPT Script - FashionShow.txt">Download</a></td>
+      <td><a href="/ChatGPT Script - FashionShow.txt">Download</a></td>
     </tr>
     <tr>
       <td>ChatGPT Script - Frisky Illustration Style</td>
