--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <tr>
       <td>ChatGPT Script - Frisky Illustration Style</td>
       <td>A more risque type of illustration</td>
-      <td><a href="tango-one-gpt/ChatGPT-Scripts/ChatGPT Script - Frisky Illustration Style.txt">Download</a></td>
+      <td><a href="ChatGPT Script - Frisky Illustration Style.txt">Download</a></td>
     </tr>
     <tr>
       <td>ChatGPT Script - Frisky Street Art Style</td>
