Update order and fixed Pan Am

--- a/index.html
+++ b/index.html
@@ -18,6 +18,46 @@
     </tr>
   </thead>
   <tbody>
+	<tr>
+		<td>ChatGPT Script - AirShow</td>
+		<td>Imagery of aircraft</td>
+		<td><a href="ChatGPT Script - AirShow.txt">Download</a></td>
+	</tr>
+	<tr>
+		<td>ChatGPT Script - All white interior design</td>
+		<td>Interior design photos featuring a white palette</td>
+		<td><a href="ChatGPT Script - All white interior design.txt">Download</a></td>
+	</tr>
+	<tr>
+		<td>ChatGPT script - AnimalTime</td>
+		<td>Imagery of animals in natural surroundings</td>
+		<td><a href="ChatGPT script - AnimalTime.txt">Download</a></td>
+	</tr>
+	<tr>
+		<td>ChatGPT Script - Approach Shot of an Alien World</td>
+		<td>Imagery of spacecraft nearing an alien planet</td>
+		<td><a href="ChatGPT Script - Approach Shot of an Alien World.txt">Download</a></td>
+	</tr>
+	<tr>
+		<td>ChatGPT Script - CarChase</td>
+		<td>Action images of automobiles</td>
+		<td><a href="ChatGPT Script - CarChase.txt">Download</a></td>
+	</tr>
+	<tr>
+		<td>ChatGPT Script - CarShow</td>
+		<td>Still images of automobiles</td>
+		<td><a href="ChatGPT Script - CarShow.txt">Download</a></td>
+	</tr>
+	<tr>
+		<td>ChatGPT script - DragonTime</td>
+		<td>Images of Dragons</td>
+		<td><a href="ChatGPT script - DragonTime.txt">Download</a></td>
+	</tr>
+	<tr>
+		<td>ChatGPT Script - Fashion Portraits</td>
+		<td>Combines Portraiture and FashionShow optimized for MJ5</td>
+		<td><a href="ChatGPT Script - Fashion Portraits.txt">Download</a></td>
+	</tr>
     <tr>
       <td>ChatGPT Script - FashionShow</td>
       <td>Imagery of high fashion models</td>
@@ -63,6 +103,11 @@
       <td>Imagery recalling the plane nose-art styles popular in the US military</td>
       <td><a href="ChatGPT Script - Nose Art Illustration Style.txt">Download</a></td>
     </tr>
+	<tr>
+	  <td>ChatGPT Script - PanAm Style</td>
+	  <td>Travel posters in the vintage Pan-American Airlines style</td>
+	  <td><a href="ChatGPT Script - PanAm Style.txt">Download</a></td>
+	</tr>
 	<tr>
 	  <td>ChatGPT Script - Portraiture - StarWars</td>
 	  <td>Professional style portraits in the style of the Star Wars universe</td>
@@ -163,47 +208,7 @@
 		<td>Imagery that recalls vinyl album artwork from the 1970s and early 80s</td>
 		<td><a href="ChatGPT Script - 70sAlbums.txt">Download</a></td>
 	</tr>
-	<tr>
-		<td>ChatGPT Script - AirShow</td>
-		<td>Imagery of aircraft</td>
-		<td><a href="ChatGPT Script - AirShow.txt">Download</a></td>
-	</tr>
-	<tr>
-		<td>ChatGPT Script - All white interior design</td>
-		<td>Interior design photos featuring a white palette</td>
-		<td><a href="ChatGPT Script - All white interior design.txt">Download</a></td>
-	</tr>
-	<tr>
-		<td>ChatGPT script - AnimalTime</td>
-		<td>Imagery of animals in natural surroundings</td>
-		<td><a href="ChatGPT script - AnimalTime.txt">Download</a></td>
-	</tr>
-	<tr>
-		<td>ChatGPT Script - Approach Shot of an Alien World</td>
-		<td>Imagery of spacecraft nearing an alien planet</td>
-		<td><a href="ChatGPT Script - Approach Shot of an Alien World.txt">Download</a></td>
-	</tr>
-	<tr>
-		<td>ChatGPT Script - CarChase</td>
-		<td>Action images of automobiles</td>
-		<td><a href="ChatGPT Script - CarChase.txt">Download</a></td>
-	</tr>
-	<tr>
-		<td>ChatGPT Script - CarShow</td>
-		<td>Still images of automobiles</td>
-		<td><a href="ChatGPT Script - CarShow.txt">Download</a></td>
-	</tr>
-	<tr>
-		<td>ChatGPT script - DragonTime</td>
-		<td>Images of Dragons</td>
-		<td><a href="ChatGPT script - DragonTime.txt">Download</a></td>
-	</tr>
-	<tr>
-		<td>ChatGPT Script - Fashion Portraits</td>
-		<td>Combines Portraiture and FashionShow optimized for MJ5</td>
-		<td><a href="ChatGPT Script - Fashion Portraits.txt">Download</a></td>
-	</tr>
-	</table>
+     </table>
 	<h2>How to work with ChatGPT when your results are less than optimal</h2>
 	  <p>When working with an existing script, sometimes ChatGPT will either lsoe track of what it is doing, give very verbose replies or otherwise act in unexpected ways. When this occurs you have two basic choices. The first is simply to start a new chat session and start over. This will often correct situations when ChatGPT is just giving badly formed replies. The second choice is to work with ChatGPT like it is meant to be used - as a conversation. Simply offer corrective guidance to ChatGPT within your session and coas him back to what you want.</p>
 	<h2>No warranty</h2>
