--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@
 		<td><a href="ChatGPT_Random_DC.txt">Download</a></td>
 	</tr>
 	<tr>
-		<td>ChatGPT Script - F1 Showcase</td>
+		<td>ChatGPT Script - Formula-One1 Cars</td>
 		<td>Imagery of Formula 1 racing</td>
-		<td><a href="ChatGPT Script - F1 Showcase.txt">Download</a></td>
+		<td><a href="ChatGPT Script - Formula-One1 Cars.txt">Download</a></td>
 	</tr>
 	<tr>
 		<td>ChatGPT Script - 70sAlbums</td>
