--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
 		<td><a href="ChatGPT Script - Approach Shot of an Alien World.txt">Download</a></td>
 	</tr>
 	<tr>
+		<td>ChatGPT Script - Architecture - FLW</td>
+		<td>Architectural renders by Frank Lloyd Wright</td>
+		<td><a href="ChatGPT Script - Architecture - FLW.txt">Download</a></td>
+	</tr>
+	<tr>
 		<td>ChatGPT Script - CarChase</td>
 		<td>Action images of automobiles</td>
 		<td><a href="ChatGPT Script - CarChase.txt">Download</a></td>
@@ -208,7 +213,48 @@
 		<td>Imagery that recalls vinyl album artwork from the 1970s and early 80s</td>
 		<td><a href="ChatGPT Script - 70sAlbums.txt">Download</a></td>
 	</tr>
-     </table>
+	<tr>
+		<td>ChatGPT - Adventure Game Engine</td>
+		<td>Play out a text-based adventure in ChatGPT 4</td>
+		<td><a href="ChatGPT - Adventure Game Engine.txt">Download</a></td>
+	</tr>
+	<tr>
+		<td>ChatGPT - Wrestling Game Engine</td>
+		<td>Play out a text-based Professional Wrestling RPG in ChatGPT 4</td>
+		<td><a href="ChatGPT - Wrestling Game Engine.txt">Download</a></td>
+	</tr>
+	<tr>
+		<td>Darkest Dungeon - Story Time</td>
+		<td>ChatGPT 4 generated story in the style of the Ancestor from Darkest Dungeon</td>
+		<td><a href="Darkest Dungeon - Story Time.txt">Download</a></td>
+	</tr>
+	<tr>
+		<td>Darkest Dungeon - Narrator Text - part 1</td>
+		<td>Inputs used to prime ChatGPT 4 for Story Time</td>
+		<td><a href="Darkest Dungeon - Narrator Text - part 1.txt">Download</a></td>
+	</tr>
+	<tr>
+		<td>Darkest Dungeon - Narrator Text - part 2</td>
+		<td>Inputs used to prime ChatGPT 4 for Story Time</td>
+		<td><a href="Darkest Dungeon - Narrator Text - part 2.txt">Download</a></td>
+	</tr>
+	<tr>
+		<td>Darkest Dungeon - Narrator Text - part 3</td>
+		<td>Inputs used to prime ChatGPT 4 for Story Time</td>
+		<td><a href="Darkest Dungeon - Narrator Text - part 3.txt">Download</a></td>
+	</tr>
+	<tr>
+		<td>Darkest Dungeon - Narrator Text - part 4</td>
+		<td>Inputs used to prime ChatGPT 4 for Story Time</td>
+		<td><a href="Darkest Dungeon - Narrator Text - part 4.txt">Download</a></td>
+	</tr>
+	<tr>
+		<td>Darkest Dungeon - Narrator Text - part 5</td>
+		<td>Inputs used to prime ChatGPT 4 for Story Time</td>
+		<td><a href="Darkest Dungeon - Narrator Text - part 5.txt">Download</a></td>
+	</tr>
+
+</table>
 	<h2>How to work with ChatGPT when your results are less than optimal</h2>
 	  <p>When working with an existing script, sometimes ChatGPT will either lsoe track of what it is doing, give very verbose replies or otherwise act in unexpected ways. When this occurs you have two basic choices. The first is simply to start a new chat session and start over. This will often correct situations when ChatGPT is just giving badly formed replies. The second choice is to work with ChatGPT like it is meant to be used - as a conversation. Simply offer corrective guidance to ChatGPT within your session and coas him back to what you want.</p>
 	<h2>No warranty</h2>
