Added Sandcastles script

--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
       <td>Imagery of high fashion models</td>
       <td><a href="ChatGPT Script - FashionShow.txt">Download</a></td>
     </tr>
+	<tr>
+		<td>ChatGPT Script - Formula-One1 Cars</td>
+		<td>Imagery of Formula 1 racing</td>
+		<td><a href="ChatGPT Script - Formula-One1 Cars.txt">Download</a></td>
+	</tr>
     <tr>
       <td>ChatGPT Script - Frisky Illustration Style</td>
       <td>A more risque type of illustration</td>
@@ -134,9 +139,19 @@
 	  <td><a href="ChatGPT Script - Portraiture Style.txt">Download</a></td>
 	</tr>
 	<tr>
+		<td>ChatGPT_Random_DC</td>
+		<td>Imagery of DC-style comic book characters</td>
+		<td><a href="ChatGPT_Random_DC.txt">Download</a></td>
+	</tr>
+	<tr>
 	  <td>ChatGPT Script - RedDeadRedemption</td>
 	  <td>Imagery that recalls the video game Red Dead Redemption</td>
 	  <td><a href="ChatGPT Script - RedDeadRedemption.txt">Download</a></td>
+	</tr>
+	<tr>
+		<td>ChatGPT Script - Sandcastles_Random_DC</td>
+		<td>Whimsical sand castles</td>
+		<td><a href="ChatGPT Script - Sandcastles.txt">Download</a></td>
 	</tr>
 	<tr>
 	  <td>ChatGPT Script - Satellite Imagery</td>
@@ -197,16 +212,6 @@
 		<td>ChatGPT Script - WiseBot Variation 4</td>
 		<td>A general purpose script for generating a wide variety of imagery prompts</td>
 		<td><a href="ChatGPT Script - WiseBot Variation 4.txt">Download</a></td>
-	</tr>
-	<tr>
-		<td>ChatGPT_Random_DC</td>
-		<td>Imagery of DC-style comic book characters</td>
-		<td><a href="ChatGPT_Random_DC.txt">Download</a></td>
-	</tr>
-	<tr>
-		<td>ChatGPT Script - Formula-One1 Cars</td>
-		<td>Imagery of Formula 1 racing</td>
-		<td><a href="ChatGPT Script - Formula-One1 Cars.txt">Download</a></td>
 	</tr>
 	<tr>
 		<td>ChatGPT Script - 70sAlbums</td>
