--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </tr>
 	<tr>
 		<td>ChatGPT Script - Formula-One1 Cars</td>
-		<td>Imagery of Formula 1 racing</td>
+		<td>Imagery of Formula One racing</td>
 		<td><a href="ChatGPT Script - Formula-One1 Cars.txt">Download</a></td>
 	</tr>
     <tr>
