--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 	  <td><a href="ChatGPT Script - RedDeadRedemption.txt">Download</a></td>
 	</tr>
 	<tr>
-		<td>ChatGPT Script - Sandcastles_Random_DC</td>
+		<td>ChatGPT Script - Sandcastles</td>
 		<td>Whimsical sand castles</td>
 		<td><a href="ChatGPT Script - Sandcastles.txt">Download</a></td>
 	</tr>
