Updated for Disney and CineMagic

--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
 		<td><a href="ChatGPT Script - CarShow.txt">Download</a></td>
 	</tr>
 	<tr>
+		<td>ChatGPT Script - CineMagic Script Mark-IV</td>
+		<td>Still frames from feature films</td>
+		<td><a href="ChatGPT Script - CineMagic Script Mark-IV.txt">Download</a></td>
+	</tr>
+	<tr>
+		<td>ChatGPT script - Disney Style</td>
+		<td>Images in the style of Disney's Nine Old Men</td>
+		<td><a href="ChatGPT script - Disney Style.txt">Download</a></td>
+	</tr>
+	<tr>
 		<td>ChatGPT script - DragonTime</td>
 		<td>Images of Dragons</td>
 		<td><a href="ChatGPT script - DragonTime.txt">Download</a></td>
@@ -70,7 +80,7 @@
     </tr>
 	<tr>
 		<td>ChatGPT Script - Formula-One1 Cars</td>
-		<td>Imagery of Formula One racing</td>
+		<td>Imagery of Formula 1 racing</td>
 		<td><a href="ChatGPT Script - Formula-One1 Cars.txt">Download</a></td>
 	</tr>
     <tr>
