--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<td><a href="ChatGPT Script - CineMagic Script Mark-IV.txt">Download</a></td>
 	</tr>
 	<tr>
-		<td>ChatGPT script - Disney Style</td>
+		<td>ChatGPT Script - Disney Style</td>
 		<td>Images in the style of Disney's Nine Old Men</td>
 		<td><a href="ChatGPT script - Disney Style.txt">Download</a></td>
 	</tr>
