Updated Index for latest scripts (Story Mode)

--- a/index.html
+++ b/index.html
@@ -174,6 +174,26 @@
 	  <td><a href="ChatGPT Script - StainedGlass.txt">Download</a></td>
 	</tr>
 	<tr>
+		<td>ChatGPT Script - Story Mode - GoT</td>
+		<td>Cinematic images for Game of Thrones</td>
+		<td><a href="ChatGPT Script - Story Mode - GoT.txt">Download</a></td>
+	</tr>
+	<tr>
+		<td>ChatGPT Script - Story Mode - Moana</td>
+		<td>Cinematic images for live-action Moana</td>
+		<td><a href="ChatGPT Script - Story Mode - Moana.txt">Download</a></td>
+	</tr>
+	<tr>
+		<td>ChatGPT Script - Story Mode - Moana - Editorial</td>
+		<td>Character images for live-action Moana</td>
+		<td><a href="ChatGPT Script - Story Mode - Moana - Editorial.txt">Download</a></td>
+	</tr>
+	<tr>
+		<td>ChatGPT Script - Story Mode - The Witcher</td>
+		<td>Cinematic images for The Witcher</td>
+		<td><a href="ChatGPT Script - Story Mode - The Witcher.txt">Download</a></td>
+	</tr>
+	<tr>
 	  <td>ChatGPT Script - StoryMode Style - WizardingWorld</td>
 	  <td>Imagery that tells a story set in the Wizarding World universe</td>
 	  <td><a href="ChatGPT Script - StoryMode Style - WizardingWorld.txt">Download</a></td>
