Manual update for latest Story Mode scripts

--- a/index.html
+++ b/index.html
@@ -54,16 +54,6 @@
 		<td><a href="ChatGPT Script - CarShow.txt">Download</a></td>
 	</tr>
 	<tr>
-		<td>ChatGPT Script - CineMagic Script Mark-IV</td>
-		<td>Still frames from feature films</td>
-		<td><a href="ChatGPT Script - CineMagic Script Mark-IV.txt">Download</a></td>
-	</tr>
-	<tr>
-		<td>ChatGPT Script - Disney Style</td>
-		<td>Images in the style of Disney's Nine Old Men</td>
-		<td><a href="ChatGPT script - Disney Style.txt">Download</a></td>
-	</tr>
-	<tr>
 		<td>ChatGPT script - DragonTime</td>
 		<td>Images of Dragons</td>
 		<td><a href="ChatGPT script - DragonTime.txt">Download</a></td>
@@ -159,7 +149,7 @@
 	  <td><a href="ChatGPT Script - RedDeadRedemption.txt">Download</a></td>
 	</tr>
 	<tr>
-		<td>ChatGPT Script - Sandcastles</td>
+		<td>ChatGPT Script - Sandcastles_Random_DC</td>
 		<td>Whimsical sand castles</td>
 		<td><a href="ChatGPT Script - Sandcastles.txt">Download</a></td>
 	</tr>
@@ -182,6 +172,26 @@
 	  <td>ChatGPT Script - StainedGlass</td>
 	  <td>Imagery featuring stained glass artwork</td>
 	  <td><a href="ChatGPT Script - StainedGlass.txt">Download</a></td>
+	</tr>
+	<tr>
+		<td>ChatGPT Script - Story Mode - GoT</td>
+		<td>Cinematic images for Game of Thrones</td>
+		<td><a href="ChatGPT Script - Story Mode - GoT.txt">Download</a></td>
+	</tr>
+	<tr>
+		<td>ChatGPT Script - Story Mode - Moana</td>
+		<td>Cinematic images for live-action Moana</td>
+		<td><a href="ChatGPT Script - Story Mode - Moana.txt">Download</a></td>
+	</tr>
+	<tr>
+		<td>ChatGPT Script - Story Mode - Moana - Editorial</td>
+		<td>Character images for live-action Moana</td>
+		<td><a href="ChatGPT Script - Story Mode - Moana - Editorial.txt">Download</a></td>
+	</tr>
+	<tr>
+		<td>ChatGPT Script - Story Mode - The Witcher</td>
+		<td>Cinematic images for The Witcher</td>
+		<td><a href="ChatGPT Script - Story Mode - The Witcher.txt">Download</a></td>
 	</tr>
 	<tr>
 	  <td>ChatGPT Script - StoryMode Style - WizardingWorld</td>
