--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <h2>Scripts</h2>
     <table>
 		<thead>
+			<style>
+				table,tr,th,td {
+					border:1px solid black;
+					border-spacing: 10px;
+				}
+			</style>
 			<tr>
 				<th>Category</th>
 				<th>Script Name</th>
