--- a/index.html
+++ b/index.html
@@ -1,9 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang-"en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Specialized ChatGPT Scripts</title>
-  </head>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+    }
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      margin-bottom: 20px;
+    }
+    th, td {
+      border: 1px solid black;
+      padding: 10px;
+      text-align: left;
+      vertical-align: top;
+    }
+    th {
+      background-color: #f2f2f2;
+      font-weight: bold;
+    }
+    a {
+      color: #1a73e8;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style> 
+ </head>
   <body>
     <h1>Specialized ChatGPT Scripts</h1>
     <p>These specialized ChatGPT scripts have been developed to produce narrative text prompts that can be fed into a generative AI art program to create imagery. They have been created by Tango'One in conjunction with the community on the MidjourneyAI Discord channel image-jams / chatGPT prompt generation for Midjourney. To use these scripts, download one, open a ChatGPT session and paste in the script. When you get a response, copy it and paste it into MidjourneyAI. The generated prompts are likely to work with other generative AI programs as well. If you do use any of these scripts, please share your results and your tweaks to the community channel listed above. Direct link: <a href="https://discord.com/channels/662267976984297473/1050439812307497012">https://discord.com/channels/662267976984297473/1050439812307497012</a>.</p>
@@ -11,12 +40,6 @@
     <h2>Scripts</h2>
     <table>
 		<thead>
-			<style>
-				table,tr,th,td {
-					border:1px solid black;
-					border-spacing: 20px;
-				}
-			</style>
 			<tr>
 				<th>Category</th>
 				<th>Script Name</th>
@@ -25,6 +48,7 @@
 			</tr>
 		</thead>
 		<tbody>
+			<!-- Vehicles & Transporation -->
 			<tr>
 				<td rowspan="6">Vehicles &amp; Transportation</td>
 				<td>ChatGPT Script - AirShow</td>
@@ -51,20 +75,11 @@
 				<td>Imagery of boats and other watercraft</td>
 				<td><a href="ChatGPT Script - Watercrafts.txt">Download</a></td>
 			</tr>
-			<tr>
+			<!-- Blank row or row with a different background color -->
+			<tr style="background-color: #f2f2f2;">
+				<td colspan="4"></td>
 			</tr>
-		</tbody>
-	</table>
-    <table>
-		<thead>
-			<tr>
-				<th>Category</th>
-				<th>Script Name</th>
-				<th>Description</th>
-				<th>Download Link</th>
-			</tr>
-		</thead>
-		<tbody>
+			<!-- Architecture & Interior Design -->
 			<tr>
 				<td rowspan="5">Architecture &amp; Interior Design</td>
 				<td>ChatGPT Script - All white interior design</td>
@@ -81,20 +96,11 @@
 			  <td>Imagery featuring stained glass artwork</td>
 			  <td><a href="ChatGPT Script - StainedGlass.txt">Download</a></td>
 			</tr>
-			<tr>
+			<!-- Blank row or row with a different background color -->
+			<tr style="background-color: #f2f2f2;">
+				<td colspan="4"></td>
 			</tr>
-		</tbody>
-	</table>
-    <table>
-		<thead>
-			<tr>
-				<th>Category</th>
-				<th>Script Name</th>
-				<th>Description</th>
-				<th>Download Link</th>
-			</tr>
-		</thead>
-		<tbody>
+			<!-- Animals & Nature -->
 			<tr>
 				<td rowspan="5">Animals &amp; Nature</td>
 				<td>ChatGPT script - AnimalTime</td>
@@ -111,20 +117,11 @@
 			  <td>High-detailed imagery of nature</td>
 			  <td><a href="ChatGPT Script - NatureIsFire.txt">Download</a></td>
 			</tr>
-			<tr>
+			<!-- Blank row or row with a different background color -->
+			<tr style="background-color: #f2f2f2;">
+				<td colspan="4"></td>
 			</tr>
-		</tbody>
-	</table>
-    <table>
-		<thead>
-			<tr>
-				<th>Category</th>
-				<th>Script Name</th>
-				<th>Description</th>
-				<th>Download Link</th>
-			</tr>
-		</thead>
-		<tbody>
+			<!-- Science Fiction & Space -->
 			<tr>
 				<td rowspan="5">Science Fiction &amp; Space</td>
 				<td>ChatGPT Script - Approach Shot of an Alien World</td>
@@ -146,20 +143,11 @@
 			  <td>Space imagery of planets</td>
 			  <td><a href="ChatGPT Script - Satellite Imagery.txt">Download</a></td>
 			</tr>
-			<tr>
+			<!-- Blank row or row with a different background color -->
+			<tr style="background-color: #f2f2f2;">
+				<td colspan="4"></td>
 			</tr>
-		</tbody>
-	</table>
-    <table>
-		<thead>
-			<tr>
-				<th>Category</th>
-				<th>Script Name</th>
-				<th>Description</th>
-				<th>Download Link</th>
-			</tr>
-		</thead>
-		<tbody>
+			<!-- Fashion & Jewelry -->
 			<tr>
 				<td rowspan="6">Fashion &amp; Jewelry</td>
 				<td>ChatGPT Script - Fashion Portraits</td>
@@ -186,20 +174,11 @@
 			  <td>Portraiture images featuring urban styles</td>
 			  <td><a href="ChatGPT Script - Frisky Street Art Style.txt">Download</a></td>
 			</tr>
-			<tr>
+			<!-- Blank row or row with a different background color -->
+			<tr style="background-color: #f2f2f2;">
+				<td colspan="4"></td>
 			</tr>
-		</tbody>
-	</table>
-    <table>
-		<thead>
-			<tr>
-				<th>Category</th>
-				<th>Script Name</th>
-				<th>Description</th>
-				<th>Download Link</th>
-			</tr>
-		</thead>
-		<tbody>
+			<!-- Sports & Recreation -->
 			<tr>
 				<td rowspan="5">Sports &amp; Recreation</td>
 				<td>ChatGPT Script - Golfing</td>
@@ -216,20 +195,11 @@
 				<td>Vintage travel style images featuring tiki bars</td>
 				<td><a href="ChatGPT Script - Vintage Travel Poster - Tiki Bar.txt">Download</a></td>
 			</tr>
-			<tr>
+			<!-- Blank row or row with a different background color -->
+			<tr style="background-color: #f2f2f2;">
+				<td colspan="4"></td>
 			</tr>
-		</tbody>
-	</table>
-    <table>
-		<thead>
-			<tr>
-				<th>Category</th>
-				<th>Script Name</th>
-				<th>Description</th>
-				<th>Download Link</th>
-			</tr>
-		</thead>
-		<tbody>
+			<!-- Fantasy Worlds - Games, Movies & TV -->
 			<tr>
 				<td rowspan="20">Fantasy Worlds, Games, Movies, TV</td>
 				<td>ChatGPT Script - MagicalCityscape</td>
@@ -321,20 +291,11 @@
 				<td>Action imagery of warfare</td>
 				<td><a href="ChatGPT Script - Wars Or Battles.txt">Download</a></td>
 			</tr>
-			<tr>
+			<!-- Blank row or row with a different background color -->
+			<tr style="background-color: #f2f2f2;">
+				<td colspan="4"></td>
 			</tr>
-		</tbody>
-	</table>
-    <table>
-		<thead>
-			<tr>
-				<th>Category</th>
-				<th>Script Name</th>
-				<th>Description</th>
-				<th>Download Link</th>
-			</tr>
-		</thead>
-		<tbody>
+			<!-- Art & Design -->
 			<tr>
 				<td rowspan="7">Art &amp; Design</td>
 				<td>ChatGPT Script - Lite Brite</td>
@@ -366,20 +327,11 @@
 				<td>Whimsical sand castles</td>
 				<td><a href="ChatGPT Script - Sandcastles.txt">Download</a></td>
 			</tr>
-			<tr>
+			<!-- Blank row or row with a different background color -->
+			<tr style="background-color: #f2f2f2;">
+				<td colspan="4"></td>
 			</tr>
-		</tbody>
-	</table>
-    <table>
-		<thead>
-			<tr>
-				<th>Category</th>
-				<th>Script Name</th>
-				<th>Description</th>
-				<th>Download Link</th>
-			</tr>
-		</thead>
-		<tbody>
+			<!-- General Purpose -->
 			<tr>
 				<td rowspan="5">General Purpose</td>
 				<td>ChatGPT Script - Script to Develop Scripts</td>
@@ -396,20 +348,11 @@
 				<td>A general purpose script for generating a wide variety of imagery prompts</td>
 				<td><a href="ChatGPT Script - WiseBot Variation 4.txt">Download</a></td>
 			</tr>
-			<tr>
+			<!-- Blank row or row with a different background color -->
+			<tr style="background-color: #f2f2f2;">
+				<td colspan="4"></td>
 			</tr>
-		</tbody>
-	</table>
-    <table>
-		<thead>
-			<tr>
-				<th>Category</th>
-				<th>Script Name</th>
-				<th>Description</th>
-				<th>Download Link</th>
-			</tr>
-		</thead>
-		<tbody>
+			<!-- GPT-Based Gaming -->
 			<tr>
 				<td rowspan="5">GPT-based Gaming</td>
 				<td>ChatGPT - Adventure Game Engine</td>
