More formatting -dark mode

--- a/index.html
+++ b/index.html
@@ -4,34 +4,36 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Specialized ChatGPT Scripts</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-    }
-    table {
-      border-collapse: collapse;
-      width: 100%;
-      margin-bottom: 20px;
-    }
-    th, td {
-      border: 1px solid black;
-      padding: 10px;
-      text-align: left;
-      vertical-align: top;
-    }
-    th {
-      background-color: #f2f2f2;
-      font-weight: bold;
-    }
-    a {
-      color: #1a73e8;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-  </style> 
+ <style>
+  body {
+    font-family: Arial, sans-serif;
+    margin: 20px;
+    background-color: #2c2c2c;
+    color: #f2f2f2;
+  }
+  table {
+    border-collapse: collapse;
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  th, td {
+    border: 1px solid #828282;
+    padding: 10px;
+    text-align: left;
+    vertical-align: top;
+  }
+  th {
+    background-color: #3c3c3c;
+    font-weight: bold;
+  }
+  a {
+    color: #1a73e8;
+    text-decoration: none;
+  }
+  a:hover {
+    text-decoration: underline;
+  }
+</style>
  </head>
   <body>
     <h1>Specialized ChatGPT Scripts</h1>
@@ -50,7 +52,7 @@
 		<tbody>
 			<!-- Vehicles & Transporation -->
 			<tr>
-				<td rowspan="6">Vehicles &amp; Transportation</td>
+				<td rowspan="5">Vehicles &amp; Transportation</td>
 				<td>ChatGPT Script - AirShow</td>
 				<td>Imagery of aircraft</td>
 				<td><a href="ChatGPT Script - AirShow.txt">Download</a></td>
@@ -81,7 +83,7 @@
 			</tr>
 			<!-- Architecture & Interior Design -->
 			<tr>
-				<td rowspan="5">Architecture &amp; Interior Design</td>
+				<td rowspan="3">Architecture &amp; Interior Design</td>
 				<td>ChatGPT Script - All white interior design</td>
 				<td>Interior design photos featuring a white palette</td>
 				<td><a href="ChatGPT Script - All white interior design.txt">Download</a></td>
@@ -102,7 +104,7 @@
 			</tr>
 			<!-- Animals & Nature -->
 			<tr>
-				<td rowspan="5">Animals &amp; Nature</td>
+				<td rowspan="3">Animals &amp; Nature</td>
 				<td>ChatGPT script - AnimalTime</td>
 				<td>Imagery of animals in natural surroundings</td>
 				<td><a href="ChatGPT script - AnimalTime.txt">Download</a></td>
@@ -123,7 +125,7 @@
 			</tr>
 			<!-- Science Fiction & Space -->
 			<tr>
-				<td rowspan="5">Science Fiction &amp; Space</td>
+				<td rowspan="4">Science Fiction &amp; Space</td>
 				<td>ChatGPT Script - Approach Shot of an Alien World</td>
 				<td>Imagery of spacecraft nearing an alien planet</td>
 				<td><a href="ChatGPT Script - Approach Shot of an Alien World.txt">Download</a></td>
@@ -149,7 +151,7 @@
 			</tr>
 			<!-- Fashion & Jewelry -->
 			<tr>
-				<td rowspan="6">Fashion &amp; Jewelry</td>
+				<td rowspan="5">Fashion &amp; Jewelry</td>
 				<td>ChatGPT Script - Fashion Portraits</td>
 				<td>Combines Portraiture and FashionShow optimized for MJ5</td>
 				<td><a href="ChatGPT Script - Fashion Portraits.txt">Download</a></td>
@@ -180,7 +182,7 @@
 			</tr>
 			<!-- Sports & Recreation -->
 			<tr>
-				<td rowspan="5">Sports &amp; Recreation</td>
+				<td rowspan="3">Sports &amp; Recreation</td>
 				<td>ChatGPT Script - Golfing</td>
 				<td>Images of golf courses and people playing golf</td>
 				<td><a href="ChatGPT Script - Golfing.txt">Download</a></td>
@@ -201,7 +203,7 @@
 			</tr>
 			<!-- Fantasy Worlds - Games, Movies & TV -->
 			<tr>
-				<td rowspan="20">Fantasy Worlds, Games, Movies, TV</td>
+				<td rowspan="18">Fantasy Worlds, Games, Movies, TV</td>
 				<td>ChatGPT Script - MagicalCityscape</td>
 				<td>Views of a city where magic is a reality</td>
 				<td><a href="ChatGPT Script - MagicalCityscape.txt">Download</a></td>
@@ -297,7 +299,7 @@
 			</tr>
 			<!-- Art & Design -->
 			<tr>
-				<td rowspan="7">Art &amp; Design</td>
+				<td rowspan="6">Art &amp; Design</td>
 				<td>ChatGPT Script - Lite Brite</td>
 				<td>Imagery that recalls pictures made with the Lite Brite toy</td>
 				<td><a href="ChatGPT Script - Lite Brite.txt">Download</a></td>
@@ -333,7 +335,7 @@
 			</tr>
 			<!-- General Purpose -->
 			<tr>
-				<td rowspan="5">General Purpose</td>
+				<td rowspan="3">General Purpose</td>
 				<td>ChatGPT Script - Script to Develop Scripts</td>
 				<td>A script that will take input of other scripts and emulate their style to create a new script</td>
 				<td><a href="ChatGPT Script - Script to Develop Scripts.txt">Download</a></td>
@@ -354,7 +356,7 @@
 			</tr>
 			<!-- GPT-Based Gaming -->
 			<tr>
-				<td rowspan="5">GPT-based Gaming</td>
+				<td rowspan="2">GPT-based Gaming</td>
 				<td>ChatGPT - Adventure Game Engine</td>
 				<td>Play out a text-based adventure in ChatGPT 4</td>
 				<td><a href="ChatGPT - Adventure Game Engine.txt">Download</a></td>
