--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				<td><a href="ChatGPT Script - Watercrafts.txt">Download</a></td>
 			</tr>
 			<!-- Blank row or row with a different background color -->
-			<tr style="background-color: #f2f2f2;">
+			<tr style="background-color: #2c2c2c;">
 				<td colspan="4"></td>
 			</tr>
 			<!-- Architecture & Interior Design -->
@@ -99,7 +99,7 @@
 			  <td><a href="ChatGPT Script - StainedGlass.txt">Download</a></td>
 			</tr>
 			<!-- Blank row or row with a different background color -->
-			<tr style="background-color: #f2f2f2;">
+			<tr style="background-color: #2c2c2c;">
 				<td colspan="4"></td>
 			</tr>
 			<!-- Animals & Nature -->
@@ -120,7 +120,7 @@
 			  <td><a href="ChatGPT Script - NatureIsFire.txt">Download</a></td>
 			</tr>
 			<!-- Blank row or row with a different background color -->
-			<tr style="background-color: #f2f2f2;">
+			<tr style="background-color: #2c2c2c;">
 				<td colspan="4"></td>
 			</tr>
 			<!-- Science Fiction & Space -->
@@ -146,7 +146,7 @@
 			  <td><a href="ChatGPT Script - Satellite Imagery.txt">Download</a></td>
 			</tr>
 			<!-- Blank row or row with a different background color -->
-			<tr style="background-color: #f2f2f2;">
+			<tr style="background-color: #2c2c2c;">
 				<td colspan="4"></td>
 			</tr>
 			<!-- Fashion & Jewelry -->
@@ -177,7 +177,7 @@
 			  <td><a href="ChatGPT Script - Frisky Street Art Style.txt">Download</a></td>
 			</tr>
 			<!-- Blank row or row with a different background color -->
-			<tr style="background-color: #f2f2f2;">
+			<tr style="background-color: #2c2c2c;">
 				<td colspan="4"></td>
 			</tr>
 			<!-- Sports & Recreation -->
@@ -198,7 +198,7 @@
 				<td><a href="ChatGPT Script - Vintage Travel Poster - Tiki Bar.txt">Download</a></td>
 			</tr>
 			<!-- Blank row or row with a different background color -->
-			<tr style="background-color: #f2f2f2;">
+			<tr style="background-color: #2c2c2c;">
 				<td colspan="4"></td>
 			</tr>
 			<!-- Fantasy Worlds - Games, Movies & TV -->
@@ -294,7 +294,7 @@
 				<td><a href="ChatGPT Script - Wars Or Battles.txt">Download</a></td>
 			</tr>
 			<!-- Blank row or row with a different background color -->
-			<tr style="background-color: #f2f2f2;">
+			<tr style="background-color: #2c2c2c;">
 				<td colspan="4"></td>
 			</tr>
 			<!-- Art & Design -->
@@ -330,7 +330,7 @@
 				<td><a href="ChatGPT Script - Sandcastles.txt">Download</a></td>
 			</tr>
 			<!-- Blank row or row with a different background color -->
-			<tr style="background-color: #f2f2f2;">
+			<tr style="background-color: #2c2c2c;">
 				<td colspan="4"></td>
 			</tr>
 			<!-- General Purpose -->
@@ -351,7 +351,7 @@
 				<td><a href="ChatGPT Script - WiseBot Variation 4.txt">Download</a></td>
 			</tr>
 			<!-- Blank row or row with a different background color -->
-			<tr style="background-color: #f2f2f2;">
+			<tr style="background-color: #2c2c2c;">
 				<td colspan="4"></td>
 			</tr>
 			<!-- GPT-Based Gaming -->
