add free your mind

--- a/index.html
+++ b/index.html
@@ -341,6 +341,11 @@
 				<td><a href="ChatGPT Script - Script to Develop Scripts.txt">Download</a></td>
 			</tr>
 			<tr>
+				<td>ChatGPT Script - Free Your mind</td>
+				<td>Script that will ask for thematic input and then how you want GPT to vary it</td>
+				<td><a href="ChatGPT Script - Free your Mind - V1.txt">Download</a></td>
+			</tr>
+			<tr>
 				<td>ChatGPT Script - Simulos Script</td>
 				<td>A general purpose script for creating a wide variety of imagery</td>
 				<td><a href="ChatGPT Script - Simulos Script.txt">Download</a></td>
