--- a/index.html
+++ b/index.html
@@ -297,6 +297,47 @@
 			<tr style="background-color: #2c2c2c;">
 				<td colspan="4"></td>
 			</tr>
+			<!-- Grand Theft Auto Scripting -->
+			<tr>
+				<td rowspan="7">Grand Theft Auto Styling Scripts</td>
+				<td>GTA 1 - Background and Styling</td>
+				<td>Reference details for setting and stylistic elements - Execute first</td>
+				<td><a href="GTA 1 - Background and Styling.txt">Download</a></td>
+			</tr>
+			<tr>
+				<td>GTA 2 - Our Setting</td>
+				<td>Define locations for the other scripts - Execute second</td>
+				<td><a href="GTA 2 - Our Setting.txt">Download</a></td>
+			</tr>
+			<tr>
+				<td>GTA 3 - Prompts from MJ using describe</td>
+				<td>Results from using describe on GTA screenshots, helps set prompt style - Execute third</td>
+				<td><a href="GTA 3 - Prompts MJ created using describe on GTA V screenshots.txt">Download</a></td>
+			</tr>
+			<tr>
+				<td>GTA 4 - Preparing prompt structure</td>
+				<td>Guidelines on prompt formatting - Execute fourth</td>
+				<td><a href="GTA 4 - Background and Styling.txt">Download</a></td>
+			</tr>
+			<tr>
+				<td>GTA 5 - First Generation Set</td>
+				<td>First set of results - you do not need to execute this one</td>
+				<td><a href="GTA 5 - First Generation Set.txt">Download</a></td>
+			</tr>
+			<tr>
+				<td>GTA 6 - Revising prompt structure for in-game scene</td>
+				<td>Updating the prompt guidelines to focus on scenes from the game</td>
+				<td><a href="GTA 6 - Revising prompt structure for in-game scene.txt">Download</a></td>
+			</tr>
+			<tr>
+				<td>GTA 7 - Revising prompt structure for in-game scene</td>
+				<td>Updating prompt guidelines to focus on characters</td>
+				<td><a href="GTA 7 - Revising prompt structure for in-game people.txt">Download</a></td>
+			</tr>
+			<!-- Blank row or row with a different background color -->
+			<tr style="background-color: #2c2c2c;">
+				<td colspan="4"></td>
+			</tr>
 			<!-- Art & Design -->
 			<tr>
 				<td rowspan="6">Art &amp; Design</td>
