--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<tbody>
 			<!-- Vehicles & Transporation -->
 			<tr>
-				<td rowspan="5">Vehicles &amp; Transportation</td>
+				<td rowspan="7">Vehicles &amp; Transportation</td>
 				<td>ChatGPT Script - AirShow</td>
 				<td>Imagery of aircraft</td>
 				<td><a href="ChatGPT Script - AirShow.txt">Download</a></td>
@@ -76,6 +76,16 @@
 				<td>ChatGPT Script - Watercrafts</td>
 				<td>Imagery of boats and other watercraft</td>
 				<td><a href="ChatGPT Script - Watercrafts.txt">Download</a></td>
+			</tr>
+			<tr>
+				<td>ChatGPT Script - Aerial Combat - Priming Start</td>
+				<td>Background to prime GPT for aerial combat material - Execute first</td>
+				<td><a href="Aerial Combat - Priming for the prompts.txt">Download</a></td>
+			</tr>
+			<tr>
+				<td>ChatGPT Script - Aerial Combat - Prompt Sequence</td>
+				<td>Guidelines and prompt request - Execute second - Execute first</td>
+				<td><a href="Aerial Combat - Prompt Sequence.txt">Download</a></td>
 			</tr>
 			<!-- Blank row or row with a different background color -->
 			<tr style="background-color: #2c2c2c;">
