--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
 			</tr>
 			<!-- Fashion & Jewelry -->
 			<tr>
-				<td rowspan="5">Fashion &amp; Jewelry</td>
-				<td>ChatGPT Script - Fashion Portraits</td>
-				<td>Combines Portraiture and FashionShow optimized for MJ5</td>
-				<td><a href="ChatGPT Script - Fashion Portraits.txt">Download</a></td>
+			  <td rowspan="6">Fashion &amp; Jewelry</td>
+			  <td>ChatGPT Script - Fashion Portraits</td>
+			  <td>Combines Portraiture and FashionShow optimized for MJ5</td>
+			  <td><a href="ChatGPT Script - Fashion Portraits.txt">Download</a></td>
 			</tr>
 			<tr>
 			  <td>ChatGPT Script - FashionShow</td>
@@ -186,16 +186,26 @@
 			  <td>Portraiture images featuring urban styles</td>
 			  <td><a href="ChatGPT Script - Frisky Street Art Style.txt">Download</a></td>
 			</tr>
+			<tr>
+			  <td>ChatGPT Script - Libertine</td>
+			  <td>Portraiture images featuring free spirits whom push the boundary of acceptable moresurban styles</td>
+			  <td><a href="ChatGPT Script - Libertine.txt">Download</a></td>
+			</tr>
 			<!-- Blank row or row with a different background color -->
 			<tr style="background-color: #2c2c2c;">
 				<td colspan="4"></td>
 			</tr>
 			<!-- Sports & Recreation -->
 			<tr>
-				<td rowspan="3">Sports &amp; Recreation</td>
+				<td rowspan="4">Sports &amp; Recreation</td>
 				<td>ChatGPT Script - Golfing</td>
 				<td>Images of golf courses and people playing golf</td>
 				<td><a href="ChatGPT Script - Golfing.txt">Download</a></td>
+			</tr>
+			<tr>
+				<td>ChatGPT Script - Essence of a Song.txt</td>
+				<td>Imagery based on song lyrics style and substance</td>
+				<td><a href="ChatGPT Script - Essence of a Song.txt">Download</a></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Tiki Bar.txt</td>
