--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Aerial Combat - Prompt Sequence</td>
-				<td>Guidelines and prompt request - Execute second - Execute first</td>
+				<td>Guidelines and prompt request - Execute second - Execute second</td>
 				<td><a href="Aerial Combat - Prompt Sequence.txt">Download</a></td>
 			</tr>
 			<!-- Blank row or row with a different background color -->
