--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
 			<tr>
 				<td>ChatGPT Script - Free Your mind</td>
 				<td>Script that will ask for thematic input and then how you want GPT to vary it</td>
-				<td><a href="ChatGPT Script - Free your Mind - V1.txt">Download</a></td>
+				<td><a href="ChatGPT script - Free Your Mind - V1.txt">Download</a></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Simulos Script</td>
