--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<tbody>
 			<!-- Vehicles & Transporation -->
 			<tr>
-				<td rowspan="7">Vehicles &amp; Transportation</td>
+				<td rowspan="8">Vehicles &amp; Transportation</td>
 				<td>ChatGPT Script - AirShow</td>
 				<td>Imagery of aircraft</td>
 				<td><a href="ChatGPT Script - AirShow.txt">Download</a></td>
@@ -84,8 +84,13 @@
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Aerial Combat - Prompt Sequence</td>
-				<td>Guidelines and prompt request - Execute second - Execute second</td>
+				<td>Guidelines and prompt request - Execute second</td>
 				<td><a href="Aerial Combat - Prompt Sequence.txt">Download</a></td>
+			</tr>
+			<tr>
+				<td>ChatGPT Script - Aerial Combat - revised</td>
+				<td>Updated, good at static images but not action shots</td>
+				<td><a href="ChatGPT Script - Aerial Combat - revised.txt">Download</a></td>
 			</tr>
 			<!-- Blank row or row with a different background color -->
 			<tr style="background-color: #2c2c2c;">
@@ -114,7 +119,7 @@
 			</tr>
 			<!-- Animals & Nature -->
 			<tr>
-				<td rowspan="3">Animals &amp; Nature</td>
+				<td rowspan="5">Animals &amp; Nature</td>
 				<td>ChatGPT script - AnimalTime</td>
 				<td>Imagery of animals in natural surroundings</td>
 				<td><a href="ChatGPT script - AnimalTime.txt">Download</a></td>
@@ -125,9 +130,19 @@
 				<td><a href="ChatGPT script - DragonTime.txt">Download</a></td>
 			</tr>
 			<tr>
-			  <td>ChatGPT Script - NatureIsFire</td>
-			  <td>High-detailed imagery of nature</td>
-			  <td><a href="ChatGPT Script - NatureIsFire.txt">Download</a></td>
+				<td>ChatGPT Script - NatureIsFire</td>
+				<td>High-detailed imagery of nature</td>
+				<td><a href="ChatGPT Script - NatureIsFire-Mk-XI.txt">Download</a></td>
+			</tr>
+			<tr>
+				<td>ChatGPT Script - NatureIsFire - Alternate Approach</td>
+				<td>High-detailed imagery of nature, a different prompt style</td>
+				<td><a href="ChatGPT Script - NatureIsFire-Mk-IX.txt">Download</a></td>
+			</tr>
+			<tr>
+				<td>ChatGPT script - NatureIsFire-Mk-XII - Extreme Weather</td>
+				<td>Shots of extreme weather conditions</td>
+				<td><a href="ChatGPT script - NatureIsFire-Mk-XII - Extreme Weather - Satellite.txt">Download</a></td>
 			</tr>
 			<!-- Blank row or row with a different background color -->
 			<tr style="background-color: #2c2c2c;">
@@ -135,10 +150,15 @@
 			</tr>
 			<!-- Science Fiction & Space -->
 			<tr>
-				<td rowspan="4">Science Fiction &amp; Space</td>
+				<td rowspan="5">Science Fiction &amp; Space</td>
 				<td>ChatGPT Script - Approach Shot of an Alien World</td>
 				<td>Imagery of spacecraft nearing an alien planet</td>
 				<td><a href="ChatGPT Script - Approach Shot of an Alien World.txt">Download</a></td>
+			</tr>
+			<tr>
+				<td>ChatGPT Script - Lightsabers</td>
+				<td>WIP script for generating Star Wars style lightsabers</td>
+				<td><a href="ChatGPT Script - Lightsabers.txt">Download</a></td>
 			</tr>
 			<tr>
 			  <td>ChatGPT Script - Portraiture - StarWars</td>
@@ -360,7 +380,17 @@
 			</tr>
 			<!-- Art & Design -->
 			<tr>
-				<td rowspan="6">Art &amp; Design</td>
+				<td rowspan="8">Art &amp; Design</td>
+				<td>ChatGPT Script - Illustration Style - Dynamic</td>
+				<td>Realistic comic-book style illustrations of subjects in motion</td>
+				<td><a href="ChatGPT Script - Illustration Style - Dynamic.txt">Download</a></td>
+			</tr>
+			<tr>
+				<td>ChatGPT - Illustration - My Little Pony</td>
+				<td>WIP script for generating My Little Pony style imagery</td>
+				<td><a href="ChatGPT - Illustration - MyLittlePony Style.txt">Download</a></td>
+			</tr>
+			<tr>
 				<td>ChatGPT Script - Lite Brite</td>
 				<td>Imagery that recalls pictures made with the Lite Brite toy</td>
 				<td><a href="ChatGPT Script - Lite Brite.txt">Download</a></td>
