--- a/index.html
+++ b/index.html
@@ -132,12 +132,12 @@
 			<tr>
 				<td>ChatGPT Script - NatureIsFire</td>
 				<td>High-detailed imagery of nature</td>
-				<td><a href="ChatGPT Script - NatureIsFire-Mk-XI.txt">Download</a></td>
+				<td><a href="ChatGPT script - NatureIsFire-Mk-XI.txt">Download</a></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - NatureIsFire - Alternate Approach</td>
 				<td>High-detailed imagery of nature, a different prompt style</td>
-				<td><a href="ChatGPT Script - NatureIsFire-Mk-IX.txt">Download</a></td>
+				<td><a href="ChatGPT script - NatureIsFire-Mk-IX.txt">Download</a></td>
 			</tr>
 			<tr>
 				<td>ChatGPT script - NatureIsFire-Mk-XII - Extreme Weather</td>
