--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 				<td><a href="ChatGPT Script - CarShow.txt">Download</a></td>
 			</tr>
 			<tr>
-				<td>ChatGPT Script - Formula-One Cars</td>
+				<td>ChatGPT Script - Cars - Formula-One</td>
 				<td>Imagery of Formula 1 racing</td>
-				<td><a href="ChatGPT - Cars - Formula-One">Download</a></td>
+				<td><a href="ChatGPT Script - Cars - Formula-One.txt">Download</a></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Watercrafts</td>
