--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<tbody>
 			<!-- Vehicles & Transporation -->
 			<tr>
-				<td rowspan="8">Vehicles &amp; Transportation</td>
+				<td rowspan="9">Vehicles &amp; Transportation</td>
 				<td>ChatGPT Script - AirShow</td>
 				<td>Imagery of aircraft</td>
 				<td><a href="ChatGPT Script - AirShow.txt">Download</a></td>
@@ -76,6 +76,11 @@
 				<td>ChatGPT Script - Watercrafts</td>
 				<td>Imagery of boats and other watercraft</td>
 				<td><a href="ChatGPT Script - Watercrafts.txt">Download</a></td>
+			</tr>
+			<tr>
+				<td>ChatGPT Script - Paper Airplanes</td>
+				<td>Multi-part script for making paper airplane images</td>
+				<td><a href="ChatGPT Script - Paper Airplanes.txt">Download</a></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Aerial Combat - Priming Start</td>
@@ -243,10 +248,15 @@
 			</tr>
 			<!-- Fantasy Worlds - Games, Movies & TV -->
 			<tr>
-				<td rowspan="18">Fantasy Worlds, Games, Movies, TV</td>
+				<td rowspan="19">Fantasy Worlds, Games, Movies, TV</td>
 				<td>ChatGPT Script - MagicalCityscape</td>
 				<td>Views of a city where magic is a reality</td>
 				<td><a href="ChatGPT Script - MagicalCityscape.txt">Download</a></td>
+			</tr>
+			<tr>
+				<td>ChatGPT Script - Daedric Lords</td>
+				<td>Portraits of the Daedric Lords from The Elder Scrolls</td>
+				<td><a href="ChatGPT Script - Daedric Lords.txt">Download</a></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Portraiture - WizardingWorld</td>
