--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
 			</tr>
 			<!-- Art & Design -->
 			<tr>
-				<td rowspan="8">Art &amp; Design</td>
+				<td rowspan="9">Art &amp; Design</td>
 				<td>ChatGPT Script - Illustration Style - Dynamic</td>
 				<td>Realistic comic-book style illustrations of subjects in motion</td>
 				<td><a href="ChatGPT Script - Illustration Style - Dynamic.txt">Download</a></td>
@@ -409,6 +409,11 @@
 				<td>ChatGPT Script - Nose Art Illustration Style</td>
 				<td>Imagery recalling the plane nose-art styles popular in the US military</td>
 				<td><a href="ChatGPT Script - Nose Art Illustration Style.txt">Download</a></td>
+			</tr>
+			<tr>
+				<td>ChatGPT Script - Photorealism</td>
+				<td>General subject matter in a photorealistic style</td>
+				<td><a href="ChatGPT Script - Photorealism Precision.txt">Download</a></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - PanAm Style</td>
