--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 			<tr>
 				<td>GTA 4 - Preparing prompt structure</td>
 				<td>Guidelines on prompt formatting - Execute fourth</td>
-				<td><a href="GTA 4 - Background and Styling.txt">Download</a></td>
+				<td><a href="GTA 4 - Preparing prompt structure.txt">Download</a></td>
 			</tr>
 			<tr>
 				<td>GTA 5 - First Generation Set</td>
