--- a/index.html
+++ b/index.html
@@ -186,7 +186,12 @@
 			</tr>
 			<!-- Fashion & Jewelry -->
 			<tr>
-			  <td rowspan="6">Fashion &amp; Jewelry</td>
+			  <td rowspan="7">Fashion &amp; Jewelry</td>
+			  <td>Photorealistic Portraiture</td>
+			  <td>Highly optimized script for creating photorealistic portait images. Adjust the "Thematic Subject" section as needed. </td>
+			  <td><a href="Photorealistic Portraiture.txt">Download</a></td>
+			</tr>
+			<tr>
 			  <td>ChatGPT Script - Fashion Portraits</td>
 			  <td>Combines Portraiture and FashionShow optimized for MJ5</td>
 			  <td><a href="ChatGPT Script - Fashion Portraits.txt">Download</a></td>
