--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 				<td>Updated, good at static images but not action shots</td>
 				<td><a href="ChatGPT Script - Aerial Combat - revised.txt">Download</a></td>
 			</tr>
-			<!-- Blank row or row with a different background color -->
-			<tr style="background-color: #2c2c2c;">
+			         <!-- Blank row or row with a different background color -->
+		        <tr style="background-color: #2c2c2c;">
 				<td colspan="4"></td>
 			</tr>
 			<!-- Architecture & Interior Design -->
@@ -114,11 +114,11 @@
 				<td><a href="ChatGPT Script - Architecture - FLW.txt">Download</a></td>
 			</tr>
 			<tr>
-			  <td>ChatGPT Script - StainedGlass</td>
-			  <td>Imagery featuring stained glass artwork</td>
-			  <td><a href="ChatGPT Script - StainedGlass.txt">Download</a></td>
+			        <td>ChatGPT Script - StainedGlass</td>
+			  	<td>Imagery featuring stained glass artwork</td>
+			  	<td><a href="ChatGPT Script - StainedGlass.txt">Download</a></td>
 			</tr>
-			<!-- Blank row or row with a different background color -->
+				<!-- Blank row or row with a different background color -->
 			<tr style="background-color: #2c2c2c;">
 				<td colspan="4"></td>
 			</tr>
@@ -149,7 +149,7 @@
 				<td>Shots of extreme weather conditions</td>
 				<td><a href="ChatGPT script - NatureIsFire-Mk-XII - Extreme Weather - Satellite.txt">Download</a></td>
 			</tr>
-			<!-- Blank row or row with a different background color -->
+				<!-- Blank row or row with a different background color -->
 			<tr style="background-color: #2c2c2c;">
 				<td colspan="4"></td>
 			</tr>
@@ -166,60 +166,60 @@
 				<td><a href="ChatGPT Script - Lightsabers.txt">Download</a></td>
 			</tr>
 			<tr>
-			  <td>ChatGPT Script - Portraiture - StarWars</td>
-			  <td>Professional style portraits in the style of the Star Wars universe</td>
-			  <td><a href="ChatGPT Script - Portraiture - StarWars.txt">Download</a></td>
+				<td>ChatGPT Script - Portraiture - StarWars</td>
+				<td>Professional style portraits in the style of the Star Wars universe</td>
+				<td><a href="ChatGPT Script - Portraiture - StarWars.txt">Download</a></td>
 			</tr>
 			<tr>
-			  <td>ChatGPT Script - Portraiture Aliens</td>
-			  <td>Professional style portraits of non-human beings</td>
-			  <td><a href="ChatGPT Script - Portraiture Aliens.txt">Download</a></td>
+			  	<td>ChatGPT Script - Portraiture Aliens</td>
+			  	<td>Professional style portraits of non-human beings</td>
+			  	<td><a href="ChatGPT Script - Portraiture Aliens.txt">Download</a></td>
 			</tr>
 			<tr>
-			  <td>ChatGPT Script - Satellite Imagery</td>
-			  <td>Space imagery of planets</td>
-			  <td><a href="ChatGPT Script - Satellite Imagery.txt">Download</a></td>
+				<td>ChatGPT Script - Satellite Imagery</td>
+			  	<td>Space imagery of planets</td>
+			  	<td><a href="ChatGPT Script - Satellite Imagery.txt">Download</a></td>
 			</tr>
-			<!-- Blank row or row with a different background color -->
+				<!-- Blank row or row with a different background color -->
 			<tr style="background-color: #2c2c2c;">
 				<td colspan="4"></td>
 			</tr>
 			<!-- Fashion & Jewelry -->
 			<tr>
-			  <td rowspan="7">Fashion &amp; Jewelry</td>
-			  <td>Photorealistic Portraiture</td>
-			  <td>Highly optimized script for creating photorealistic portait images. Adjust the "Thematic Subject" section as needed. </td>
-			  <td><a href="Photorealistic Portraiture.txt">Download</a></td>
+			  	<td rowspan="7">Fashion &amp; Jewelry</td>
+			  	<td>Photorealistic Portraiture</td>
+			  	<td>Highly optimized script for creating photorealistic portait images. Adjust the "Thematic Subject" section as needed. </td>
+			  	<td><a href="Photorealistic Portraiture.txt">Download</a></td>
 			</tr>
 			<tr>
-			  <td>ChatGPT Script - Fashion Portraits</td>
-			  <td>Combines Portraiture and FashionShow optimized for MJ5</td>
-			  <td><a href="ChatGPT Script - Fashion Portraits.txt">Download</a></td>
+			  	<td>ChatGPT Script - Fashion Portraits</td>
+			  	<td>Combines Portraiture and FashionShow optimized for MJ5</td>
+			  	<td><a href="ChatGPT Script - Fashion Portraits.txt">Download</a></td>
 			</tr>
 			<tr>
-			  <td>ChatGPT Script - FashionShow</td>
-			  <td>Imagery of high fashion models</td>
-			  <td><a href="ChatGPT Script - FashionShow.txt">Download</a></td>
+			  	<td>ChatGPT Script - FashionShow</td>
+			  	<td>Imagery of high fashion models</td>
+			  	<td><a href="ChatGPT Script - FashionShow.txt">Download</a></td>
 			</tr>
 			<tr>
-			  <td>ChatGPT Script - Jewlery</td>
-			  <td>Beautiful images of expensive jewelry</td>
-			  <td><a href="ChatGPT Script - Jewlery.txt">Download</a></td>
+			  	<td>ChatGPT Script - Jewlery</td>
+			  	<td>Beautiful images of expensive jewelry</td>
+			  	<td><a href="ChatGPT Script - Jewlery.txt">Download</a></td>
 			</tr>
 			<tr>
-			  <td>ChatGPT Script - Frisky Illustration Style</td>
-			  <td>A more risque type of illustration</td>
-			  <td><a href="ChatGPT Script - Frisky Illustration Style.txt">Download</a></td>
+			  	<td>ChatGPT Script - Frisky Illustration Style</td>
+			  	<td>A more risque type of illustration</td>
+			  	<td><a href="ChatGPT Script - Frisky Illustration Style.txt">Download</a></td>
 			</tr>
 			<tr>
-			  <td>ChatGPT Script - Frisky Street Art Style</td>
-			  <td>Portraiture images featuring urban styles</td>
-			  <td><a href="ChatGPT Script - Frisky Street Art Style.txt">Download</a></td>
+			  	<td>ChatGPT Script - Frisky Street Art Style</td>
+			  	<td>Portraiture images featuring urban styles</td>
+			  	<td><a href="ChatGPT Script - Frisky Street Art Style.txt">Download</a></td>
 			</tr>
 			<tr>
-			  <td>ChatGPT Script - Libertine</td>
-			  <td>Portraiture images featuring free spirits whom push the boundary of acceptable moresurban styles</td>
-			  <td><a href="ChatGPT Script - Libertine.txt">Download</a></td>
+			  	<td>ChatGPT Script - Libertine</td>
+			  	<td>Portraiture images featuring free spirits whom push the boundary of acceptable moresurban styles</td>
+			  	<td><a href="ChatGPT Script - Libertine.txt">Download</a></td>
 			</tr>
 			<!-- Blank row or row with a different background color -->
 			<tr style="background-color: #2c2c2c;">
@@ -446,7 +446,7 @@
 			</tr>
 			<!-- General Purpose -->
 			<tr>
-				<td rowspan="4">General Purpose</td>
+				<td rowspan="5">General Purpose</td>
 				<td>ChatGPT Script - Script to Develop Scripts</td>
 				<td>A script that will take input of other scripts and emulate their style to create a new script</td>
 				<td><a href="ChatGPT Script - Script to Develop Scripts.txt">Download</a></td>
@@ -465,6 +465,11 @@
 				<td>ChatGPT Script - WiseBot Variation 4</td>
 				<td>A general purpose script for generating a wide variety of imagery prompts</td>
 				<td><a href="ChatGPT Script - WiseBot Variation 4.txt">Download</a></td>
+			</tr>
+			<tr>
+				<td>ChatGPT - Midjourney Prompt Engine</td>
+				<td>Multi-part script that will create high-detail results across genres</td>
+				<td><a href="ChatGPT - Midjourney Prompt Engine.txt">Download</a></td>
 			</tr>
 			<!-- Blank row or row with a different background color -->
 			<tr style="background-color: #2c2c2c;">
