--- a/index.html
+++ b/index.html
@@ -56,46 +56,55 @@
 				<td>ChatGPT Script - AirShow</td>
 				<td>Imagery of aircraft</td>
 				<td><a href="ChatGPT Script - AirShow.txt">Download</a></td>
+				<td><img src="IMG-AirShow.png" alt="Navy jet landing on an aircraft carrier"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - CarChase</td>
 				<td>Action images of automobiles</td>
 				<td><a href="ChatGPT Script - CarChase.txt">Download</a></td>
+				<td><img src="IMG-AirShow.png" alt="Navy jet landing on an aircraft carrier"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - CarShow</td>
 				<td>Still images of automobiles</td>
 				<td><a href="ChatGPT Script - CarShow.txt">Download</a></td>
+				<td><img src="IMG-AirShow.png" alt="Navy jet landing on an aircraft carrier"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Cars - Formula-One</td>
 				<td>Imagery of Formula 1 racing</td>
 				<td><a href="ChatGPT Script - Cars - Formula-One.txt">Download</a></td>
+				<td><img src="IMG-AirShow.png" alt="Navy jet landing on an aircraft carrier"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Watercrafts</td>
 				<td>Imagery of boats and other watercraft</td>
 				<td><a href="ChatGPT Script - Watercrafts.txt">Download</a></td>
+				<td><img src="IMG-AirShow.png" alt="Navy jet landing on an aircraft carrier"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Paper Airplanes</td>
 				<td>Multi-part script for making paper airplane images</td>
 				<td><a href="ChatGPT Script - Paper Airplanes.txt">Download</a></td>
+				<td><img src="IMG-AirShow.png" alt="Navy jet landing on an aircraft carrier"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Aerial Combat - Priming Start</td>
 				<td>Background to prime GPT for aerial combat material - Execute first</td>
 				<td><a href="Aerial Combat - Priming for the prompts.txt">Download</a></td>
+				<td><img src="IMG-AirShow.png" alt="Navy jet landing on an aircraft carrier"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Aerial Combat - Prompt Sequence</td>
 				<td>Guidelines and prompt request - Execute second</td>
 				<td><a href="Aerial Combat - Prompt Sequence.txt">Download</a></td>
+				<td><img src="IMG-AirShow.png" alt="Navy jet landing on an aircraft carrier"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Aerial Combat - revised</td>
 				<td>Updated, good at static images but not action shots</td>
 				<td><a href="ChatGPT Script - Aerial Combat - revised.txt">Download</a></td>
+				<td><img src="IMG-AirShow.png" alt="Navy jet landing on an aircraft carrier"></td>
 			</tr>
 			         <!-- Blank row or row with a different background color -->
 		        <tr style="background-color: #2c2c2c;">
