--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
 				<td>ChatGPT Script - CarChase</td>
 				<td>Action images of automobiles</td>
 				<td><a href="ChatGPT Script - CarChase.txt">Download</a></td>
-				<td><img src="IMG-AirShow.png" alt="Navy jet landing on an aircraft carrier" width="300" height="200"></td>
+				<td><img src="IMG-CarChase.png" alt="American muscle on the mean streets of San Fran" width="300" height="200"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - CarShow</td>
 				<td>Still images of automobiles</td>
 				<td><a href="ChatGPT Script - CarShow.txt">Download</a></td>
-				<td><img src="IMG-AirShow.png" alt="Navy jet landing on an aircraft carrier" width="300" height="200"></td>
+				<td><img src="IMG-CarShow.png" alt="Supercar overlooking the desert" width="300" height="140"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Cars - Formula-One</td>
