--- a/index.html
+++ b/index.html
@@ -75,37 +75,37 @@
 				<td>ChatGPT Script - Cars - Formula-One</td>
 				<td>Imagery of Formula 1 racing</td>
 				<td><a href="ChatGPT Script - Cars - Formula-One.txt">Download</a></td>
-				<td><img src="IMG-AirShow.png" alt="Navy jet landing on an aircraft carrier" width="300" height="200"></td>
+				<td><img src="IMG-Formula1.png" alt="Redbull racer speeding to the chequered flag" width="300" height="170"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Watercrafts</td>
 				<td>Imagery of boats and other watercraft</td>
 				<td><a href="ChatGPT Script - Watercrafts.txt">Download</a></td>
-				<td><img src="IMG-AirShow.png" alt="Navy jet landing on an aircraft carrier" width="300" height="200"></td>
+				<td><img src="IMG-Watercraft.png" alt="Steamboat Queen down the mighty Mississip" width="300" height="200"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Paper Airplanes</td>
 				<td>Multi-part script for making paper airplane images</td>
 				<td><a href="ChatGPT Script - Paper Airplanes.txt">Download</a></td>
-				<td><img src="IMG-AirShow.png" alt="Navy jet landing on an aircraft carrier"  width="300" height="200"></td>
+				<td><img src="IMG-PaperAirplane.png" alt="Japanese-style paper airplane"  width="300" height="180"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Aerial Combat - Priming Start</td>
 				<td>Background to prime GPT for aerial combat material - Execute first</td>
 				<td><a href="Aerial Combat - Priming for the prompts.txt">Download</a></td>
-				<td><img src="IMG-AirShow.png" alt="Navy jet landing on an aircraft carrier"  width="300" height="200"></td>
+				<td><img src="IMG-AerialCombat-Priming.png" alt="Two jets approach the combat zone at speed"  width="300" height="200"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Aerial Combat - Prompt Sequence</td>
 				<td>Guidelines and prompt request - Execute second</td>
 				<td><a href="Aerial Combat - Prompt Sequence.txt">Download</a></td>
-				<td><img src="IMG-AirShow.png" alt="Navy jet landing on an aircraft carrier"  width="300" height="200"></td>
+				<td><img src="IMG-AerialCombat-Prompt.png" alt="Splash one Tango"  width="300" height="200"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Aerial Combat - revised</td>
 				<td>Updated, good at static images but not action shots</td>
 				<td><a href="ChatGPT Script - Aerial Combat - revised.txt">Download</a></td>
-				<td><img src="IMG-AirShow.png" alt="Navy jet landing on an aircraft carrier"  width="300" height="200"></td>
+				<td><img src="IMG-AerialCombat-Revised.png" alt="Avoiding heavy enemy fire"  width="300" height="200"></td>
 			</tr>
 			         <!-- Blank row or row with a different background color -->
 		        <tr style="background-color: #2c2c2c;">
