--- a/index.html
+++ b/index.html
@@ -117,16 +117,19 @@
 				<td>ChatGPT Script - All white interior design</td>
 				<td>Interior design photos featuring a white palette</td>
 				<td><a href="ChatGPT Script - All white interior design.txt">Download</a></td>
+				<td><img src="IMG-AllWhiteInterior.png" alt="Stunning great room with a sweeping staircase"  width="300" height="200"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Architecture - FLW</td>
 				<td>Architectural renders by Frank Lloyd Wright</td>
 				<td><a href="ChatGPT Script - Architecture - FLW.txt">Download</a></td>
+				<td><img src="IMG-FrankLloydWriteStyle.png" alt="Classic Wright-inspired cantilever design"  width="300" height="200"></td>
 			</tr>
 			<tr>
 			        <td>ChatGPT Script - StainedGlass</td>
 			  	<td>Imagery featuring stained glass artwork</td>
 			  	<td><a href="ChatGPT Script - StainedGlass.txt">Download</a></td>
+				<td><img src="IMG-StainedGlass.png" alt="Stained glass window in a library"  width="300" height="300"></td>
 			</tr>
 				<!-- Blank row or row with a different background color -->
 			<tr style="background-color: #2c2c2c;">
