--- a/index.html
+++ b/index.html
@@ -141,26 +141,31 @@
 				<td>ChatGPT script - AnimalTime</td>
 				<td>Imagery of animals in natural surroundings</td>
 				<td><a href="ChatGPT script - AnimalTime.txt">Download</a></td>
+				<td><img src="IMG-AnimalTime.png" alt="Blue tick hound dog in the lavender"  width="300" height="200"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT script - DragonTime</td>
 				<td>Images of Dragons</td>
 				<td><a href="ChatGPT script - DragonTime.txt">Download</a></td>
+				<td><img src="IMG-DragonTime.png" alt="Dragon roaring"  width="300" height="180"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - NatureIsFire</td>
 				<td>High-detailed imagery of nature</td>
 				<td><a href="ChatGPT script - NatureIsFire-Mk-XI.txt">Download</a></td>
+				<td><img src="IMG-NatureIsFire-1.png" alt="Manta Ray swimming near coral"  width="300" height="200"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - NatureIsFire - Alternate Approach</td>
 				<td>High-detailed imagery of nature, a different prompt style</td>
 				<td><a href="ChatGPT script - NatureIsFire-Mk-IX.txt">Download</a></td>
+				<td><img src="IMG-NatureIsFire-2.png" alt="Desert Civit looking back at you"  width="300" height="160"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT script - NatureIsFire-Mk-XII - Extreme Weather</td>
 				<td>Shots of extreme weather conditions</td>
 				<td><a href="ChatGPT script - NatureIsFire-Mk-XII - Extreme Weather - Satellite.txt">Download</a></td>
+				<td><img src="IMG-ExtremeWeather.png" alt="Tsunami comes ashore"  width="300" height="140"></td>
 			</tr>
 				<!-- Blank row or row with a different background color -->
 			<tr style="background-color: #2c2c2c;">
