--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 				<td>ChatGPT Script - Architecture - FLW</td>
 				<td>Architectural renders by Frank Lloyd Wright</td>
 				<td><a href="ChatGPT Script - Architecture - FLW.txt">Download</a></td>
-				<td><img src="IMG-FrankLloydWriteStyle.png" alt="Classic Wright-inspired cantilever design"  width="300" height="200"></td>
+				<td><img src="IMG-FrankLloydWrightStyle.png" alt="Classic Wright-inspired cantilever design"  width="300" height="200"></td>
 			</tr>
 			<tr>
 			        <td>ChatGPT Script - StainedGlass</td>
@@ -177,26 +177,31 @@
 				<td>ChatGPT Script - Approach Shot of an Alien World</td>
 				<td>Imagery of spacecraft nearing an alien planet</td>
 				<td><a href="ChatGPT Script - Approach Shot of an Alien World.txt">Download</a></td>
+				<td><img src="IMG-AlienWorlds.png" alt="Gas giant with several moons transitting"  width="300" height="200"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Lightsabers</td>
 				<td>WIP script for generating Star Wars style lightsabers</td>
 				<td><a href="ChatGPT Script - Lightsabers.txt">Download</a></td>
+				<td><img src="IMG-Lightsaber.png" alt="A weapon of the Sith"  width="300" height="180"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Portraiture - StarWars</td>
 				<td>Professional style portraits in the style of the Star Wars universe</td>
 				<td><a href="ChatGPT Script - Portraiture - StarWars.txt">Download</a></td>
+				<td><img src="IMG-StarWarsStyle.png" alt="Dark Rey"  width="180" height="300"></td>
 			</tr>
 			<tr>
 			  	<td>ChatGPT Script - Portraiture Aliens</td>
 			  	<td>Professional style portraits of non-human beings</td>
 			  	<td><a href="ChatGPT Script - Portraiture Aliens.txt">Download</a></td>
+				<td><img src="IMG-AliensHere.png" alt="Blending in at the carnival"  width="180" height="300"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Satellite Imagery</td>
 			  	<td>Space imagery of planets</td>
 			  	<td><a href="ChatGPT Script - Satellite Imagery.txt">Download</a></td>
+				<td><img src="IMG-SatelliteImagery.png" alt="Massive hurricane"  width="300" height="140"></td>
 			</tr>
 				<!-- Blank row or row with a different background color -->
 			<tr style="background-color: #2c2c2c;">
